# scaler

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  config.toml  ec2-setup-notes.md  eslint.config.js  orb_config.json  package-lock.json  package.json  pyproject.toml  submit_tasks.py  test.py  test.toml  unified.toml
.github/workflows/: build-and-test.yml  linter.yml
ami/: opengris-scaler.pkr.hcl
benchmarks/: object_storage_server.py
config/: aws_templates.json
design/: 583-merge-native-worker-managers.md  TBD-merge-native-worker-managers.md
design/583_merge-native-worker-managers/: amendment-1.md  amendment-2.md  plan.md
docs/launchpad/: app.jsx  components.jsx  data.js  index.html  launcher-app.jsx  launcher-ec2.js  provisioner.js  scaler-launcher.html
docs/source/: conf.py  index.rst
docs/web/: launcher-shared.jsx  scaler-launcher.html
driver/ami/: build.sh
examples/: quant_research_sample.md  ray_compat_local_cluster.py  ray_compat_remote_cluster.py  readme.md  skip_examples.txt  submit_tasks.py  task_capabilities.py  test_orb.py
examples/ray_compat/: highly_parallel.py  readme.md  requirements.txt  skipped_tests.txt
samples/: stack.toml
scaler/client/: client.py
scaler/cluster/: cluster.py  combo.py  scheduler.py
scaler/config/: defaults.py
scaler/entry_points/: cluster.py  scheduler.py  top.py  worker_adapter_native.py  worker_adapter_symphony.py
scaler/io/: async_binder.py  async_binder_zmq.py  async_connector.py  async_connector_zmq.py  async_object_storage_connector.py  config.py  sync_connector.py  sync_connector_zmq.py  sync_object_storage_connector.py  sync_subscriber.py  sync_subscriber_zmq.py  utility.py  ymq_async_binder.py  ymq_async_connector.py  ymq_sync_connector.py  ymq_sync_subscriber.py
scaler/io/ymq/: CMakeLists.txt  _ymq.pyi  bytes.h  common.h  configuration.h  epoll_context.cpp  epoll_context.h  errors.h  event_loop.h  event_loop_thread.cpp  event_loop_thread.h  event_manager.cpp  event_manager.h  file_descriptor.h  interruptive_concurrent_queue.h  io_context.cpp  io_context.h  io_socket.cpp  io_socket.h  message.h  message_connection_tcp.cpp  message_connection_tcp.h  readme.md  simple_interface.cpp  tcp_client.cpp  tcp_client.h  tcp_server.cpp  tcp_server.h  timed_queue.cpp  timed_queue.h  timestamp.h  typedefs.h  utils.h  ymq.py  ymq.pyi  ymq_test.py  ymq_test2.py  ymq_test3.py
scaler/io/ymq/examples/: CMakeLists.txt  automated_echo_client.cpp  common.h  echo_client.cpp  echo_server.cpp  pub_server.cpp  remove_iosocket.cpp
scaler/io/ymq/pymod_ymq/: async.h  bytes.h  exception.h  gil.h  io_context.h  io_socket.h  message.h  python.h  todo.md  utils.h  ymq.h
scaler/io/ymq/tests/: incomplete_identity.h
scaler/object_storage/: io_helper.cpp  object_storage_server.cpp  object_storage_server.h
scaler/scheduler/: config.py  scheduler.py
scaler/ui/: task_graph.py  webui.py
scaler/utility/: identifiers.py  ymq_config.py
scaler/worker/: worker.py
scaler/worker_adapter/: native.py
scripts/: build.ps1  build.sh  ec2-setup.py  library_tool.ps1  library_tool.sh  lint.sh  test.ps1
src/: run_cluster.py  run_worker_adapter_aws_hpc.py  run_worker_adapter_orb.py  run_worker_manager_baremetal_fixed_native.py
src/cpp/scaler/utility/: CMakeLists.txt  indexed_queue.h  many_to_many_dict.h  stable_priority_queue.h
src/cpp/scaler/utility/pymod/: indexed_queue.cpp  many_to_many_dict.cpp  one_to_many_dict.cpp  stable_priority_queue.cpp
src/protocol/: common.capnp  common.capnp.c++  common.capnp.h  message.capnp.c++  message.capnp.h  object_storage.capnp.c++  object_storage.capnp.h  status.capnp.c++  status.capnp.h
tests/: CMakeLists.txt  test_balance.py  test_capabilities.py  test_client.py  test_cluster_disconnect.py  test_death_timeout.py  test_graph.py  test_scaling.py
tests/cc_ymq/: bad_header.h  basic.h  big_message.h  common.h  empty_message.h  incomplete_identity.h  passthrough.h  passthrough.py  reconnect.h  reconnect.py  slow.h  test_cc_ymq.cpp
tests/client/: test_client.py
tests/cluster/: test_cluster_disconnect.py
tests/compat/: test_ray_compat.py
tests/config/: test_config_class.py  test_config_types.py  test_readme_config.py
tests/core/: test_death_timeout.py  test_indexed_queue.py
tests/cpp/: CMakeLists.txt
tests/cpp/object_storage/: test_object_storage_server.cpp
tests/cpp/uv/: test_uv.cpp  test_uv_unix.cpp  test_uv_windows.cpp
tests/cpp/uv_ymq/: CMakeLists.txt  test_binder_socket.cpp  test_connector_socket.cpp  test_message_connection.cpp  test_mitm.cpp  test_sockets.cpp  test_sync.cpp  test_uv_ymq.cpp
tests/cpp/uv_ymq/internal/: CMakeLists.txt  test_accept_server.cpp  test_connect_client.cpp  test_event_loop_thread.cpp  test_internal.cpp  test_message_connection.cpp
tests/cpp/wrapper/uv/: test_pipe.cpp
tests/cpp/ymq/: CMakeLists.txt  common.h  test_cc_ymq.cpp  test_sockets.cpp  test_ymq.cpp  test_ymq_logging.cpp
tests/cpp/ymq/common/: testing.cpp  testing.h  testing_linux.cpp  testing_windows.cpp  utils.cpp  utils.h  utils_linux.cpp  utils_windows.cpp
tests/cpp/ymq/internal/: CMakeLists.txt  test_websocket_stream.cpp  test_websocket_utils.cpp
tests/cpp/ymq/net/: address.cpp  address.h  i_socket.h  socket.cpp  socket.h  socket_common.cpp  socket_linux.cpp  socket_utils.h  socket_utils_linux.cpp  socket_utils_windows.cpp  socket_windows.cpp  tcp_socket.h  tcp_socket_linux.cpp  tcp_socket_windows.cpp  uds_socket.cpp  uds_socket.h  websocket_socket.cpp  websocket_socket.h  websocket_socket_linux.cpp  websocket_socket_windows.cpp
tests/cpp/ymq/pipe/: pipe.cpp  pipe.h  pipe_common.cpp  pipe_linux.cpp  pipe_reader.h  pipe_reader_linux.cpp  pipe_reader_windows.cpp  pipe_utils.h  pipe_utils_linux.cpp  pipe_utils_windows.cpp  pipe_windows.cpp  pipe_writer.h  pipe_writer_linux.cpp  pipe_writer_windows.cpp
tests/cpp/ymq/py_mitm/: main.py  mitm_types.py  passthrough.py  randomly_drop_packets.py  send_rst_to_client.py  tuntap.py  windivert.py
tests/entry_points/: test_aio.py  (+2 more)
webpage/: Scaler Launcher.html  launcher-b.html  launcher-data.js  launcher-shared.jsx
(+426 files in other folders)
